--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -40,6 +40,14 @@ font-family: pn-thin;
 src: url(proxima_nova_thin.otf);
 }
 
+/* Landscape phones and smaller */
+@media (max-width: 400px) {
+   .logo img{
+    max-width: 130px !important;
+    max-height: 80px !important;
+  }
+}
+
 .content-container{
   height: 100%;
   width: 100%;
@@ -136,3 +144,8 @@ src: url(proxima_nova_thin.otf);
   max-width: 216px;
   max-height: 134px;
 }
+
+/*.mobile .logo img{
+  max-width: 216px !important;
+  max-height: 134px !important;
+}*/
