--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body, html{
-  background: url('oli-bg2.png'); 
+  background: image-url('oli-bg2.png'); 
   height: 100%;
   width: 100%;
   margin: 0;
