--- a/app/views/oli/landing.html.erb
+++ b/app/views/oli/landing.html.erb
@@ -8,33 +8,49 @@
   ga('send', 'pageview');
 
 
-  $( document ).ready(function() {
-      $(".submit-button").on("click", function(){
-        _gaq.push(['_trackEvent', 'registration', 'sign_up', 'oli',, false]);
-      })
-  });
-</script>
 
-  <div class="logo"><%= image_tag "oli-logo.png" %>
+</script>
+  
+  <div class="logo-oli"><%= image_tag "oli-logo.png" %>
 </div>
 
-  <div class="header-text">
+  <div class="header-text-oli">
     NEW ONLINE COURSE COMING SOON 
   </div>
 
-  <div class="info">
-    <div class="body-text">
+  <div class="info-oli">
+    <div class="body-text-oli">
       Gain clarity, confidence and connections so that you can do what you love, make money and make a difference.
     </div>
-    <div class="footer-text">
+    <div class="footer-text-oli">
       Be the first to hear when OLI launches.
     </div>
     <div class="oli-form">
-      <%= form_tag("/landing", method: "post") do %>
-        <%= text_field_tag(:data, nil, :type => "email", :placeholder => "Enter your email address", :class => "form-control submit-field") %>
-        <%= submit_tag("SUBMIT", :class => "submit-button") %>
+      <%= form_tag("/landing", method: "post", id: "oli-form") do %>
+      <%= text_field_tag(:name, nil, :placeholder => "Name", :class => "submit-field-name-oli") %>
+        <%= text_field_tag(:email, nil, :type => "email", :placeholder => "Email address", :class => "submit-field-oli") %>
+        <%= submit_tag("SUBMIT", :class => "submit-button-oli") %>
       <% end %>
-      <div class="status"> <%=flash[:notice]%></div>
+      <div class="status-oli"> <%=flash.now[:notice]%></div>
 
     </div> <!-- /oli-form -->
   </div> <!-- /info -->
+
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-oli">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title modal-title-oli" id="myModalLabel">Thanks for registering!</h4>
+      </div>
+      <div class="modal-body">
+        <p>Please check your email to confirm.</p>
+        <p> In the meantime, check out <a href="http://ahalya.tv">ahalya.tv</a>!</p>
+              </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
