--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -184,7 +184,7 @@ src: url(proxima_nova_thin.otf);
   font-size: 1em;
 }
 
-.mobile .submit-field-oli{
+.mobile .submit-field-oli, .mobile .submit-field-name-oli{
   height: 50px !important;
 }
 
