--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -178,6 +178,7 @@ src: url(proxima_nova_thin.otf);
   outline:none;
   padding: 5px;
   padding-left: 20px;
+  padding-right: 120px;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
