--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -54,6 +54,10 @@ src: url(proxima_nova_thin.otf);
     padding-bottom: 20px !important;
   }
 
+  .footer-text-oli{
+    padding-top: 10px !important;
+  }
+
 }
 
 @media (max-height: 350px ) and (min-width: 400px) {
