--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -121,6 +121,8 @@ src: url(proxima_nova_thin.otf);
   opacity: .6;
 } 
 
+
+
 .footer-text-oli{
   font-family: pn-light;
   text-align: center;
@@ -181,6 +183,13 @@ src: url(proxima_nova_thin.otf);
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 1em;
+}
+
+.loader{
+  position: absolute;
+  width: 0px;
+  right: 0;
+  margin-right: 0;
 }
 
 .wrapper-oli {
