--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -136,6 +136,7 @@ src: url(proxima_nova_thin.otf);
 }
 
 .status-oli{
+  height: 15px;
   font-family: pn-light;
   text-align: center;
   font-weight: normal;
