--- a/app/views/oli/landing.html.erb
+++ b/app/views/oli/landing.html.erb
@@ -1,16 +1,11 @@
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-39809535-2', 'peaceful-gorge-4955.herokuapp.com');
-  ga('send', 'pageview');
 </script>
     <div class="wrapper-oli">
-
-  <div class="logo-oli"><%= image_tag "oli-logo.png" %>
-</div>
+      <div class="logo-wrapper">
+      <div class="logo-flame"><%= image_tag "flame.png" %></div>
+  <div class="logo-oli"><%= image_tag "oli-no-flame.png" %></div>
+  </div>
 
   <div class="header-text-oli">
     NEW ONLINE COURSE COMING SOON 
