--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -175,23 +175,33 @@ cursor: pointer;
   max-width: 102*.9px;
   max-height: 141*.9px;
   &:hover {
-   -webkit-animation: spin .4s linear;
+   -webkit-animation: spin .5s linear;
 
   }
   z-index: 1000;
 }
 
 @-webkit-keyframes spin {
-  0%   {-webkit-transform: rotate(3deg)}
+  0%   {-webkit-transform: rotate(2deg)}
+      5% {-webkit-transform: rotate(4deg)}
       10% {-webkit-transform: rotate(6deg)}
-      20% {-webkit-transform: rotate(10deg)}
-      30% {-webkit-transform: rotate(6deg)}
-      40% {-webkit-transform: rotate(3deg)}
-      50% {-webkit-transform: rotate(0deg)}
-      60% {-webkit-transform: rotate(-3deg)}
-      70% {-webkit-transform: rotate(-6deg)}
-      80% {-webkit-transform: rotate(-3deg)}
-      90% {-webkit-transform: rotate(0deg)}
+      15% {-webkit-transform: rotate(8deg)}
+      20% {-webkit-transform: rotate(6deg)}
+      25% {-webkit-transform: rotate(4deg)}
+      30% {-webkit-transform: rotate(2deg)}
+      35% {-webkit-transform: rotate(0deg)}
+      40% {-webkit-transform: rotate(-2deg)}
+      45% {-webkit-transform: rotate(-4deg)}
+      50% {-webkit-transform: rotate(-6deg)}
+      55% {-webkit-transform: rotate(-8deg)}
+      60% {-webkit-transform: rotate(-6deg)}
+      65% {-webkit-transform: rotate(-4eg)}
+      70% {-webkit-transform: rotate(-2deg)}
+      75% {-webkit-transform: rotate(0deg)}
+      80% {-webkit-transform: rotate(2deg)}
+      85% {-webkit-transform: rotate(3deg)}
+      90% {-webkit-transform: rotate(2deg)}
+      95% {-webkit-transform: rotate(1deg)}
       100% {-webkit-transform: rotate(0deg)}
      
 /*  25% { transform: rotate(5deg); }
