--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -195,7 +195,7 @@ cursor: pointer;
       50% {-webkit-transform: rotate(-6deg)}
       55% {-webkit-transform: rotate(-8deg)}
       60% {-webkit-transform: rotate(-6deg)}
-      65% {-webkit-transform: rotate(-4eg)}
+      65% {-webkit-transform: rotate(-4deg)}
       70% {-webkit-transform: rotate(-2deg)}
       75% {-webkit-transform: rotate(0deg)}
       80% {-webkit-transform: rotate(2deg)}
