--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -175,8 +175,8 @@ cursor: pointer;
   max-width: 102*.9px;
   max-height: 141*.9px;
   &:hover {
-   -webkit-animation: spin .5s linear;
-
+   -webkit-animation: spin .5s;
+   -webkit-animation-timing-function: ease;
   }
   z-index: 1000;
 }
