--- a/app/assets/stylesheets/animation.css
+++ b/app/assets/stylesheets/animation.css
@@ -9,18 +9,21 @@
     left:0px;
     top:0px;
     opacity:1;
-    -webkit-transform:  rotate(0deg) scaleX(1) scaleY(1);
+    -webkit-transform:  rotate(0deg) scaleX(1) scaleY(1) 
   }
-
-  15% { -webkit-transform:  scaleY(1.05) scaleX(.6) translate(0,-1%);}
+  0% {
+  }
+  15% { -webkit-transform:  scaleY(1.05) scaleX(.6)  translate(0,-1%) ;
+}
 
   33% {
+    
     opacity:0.7;
-    -webkit-transform:  scaleY(1.1) scaleX(1)  translate(0,-2%);
+    -webkit-transform:  scaleY(1.1) scaleX(1)  translate(0,-2%) ;
+
   }
 
   60% { -webkit-transform:  scaleY(1.05) scaleX(.6)  translate(0,-1%) ;}
-  80% { -webkit-transform:  scaleY(1.05) scaleX(1.1)  translate(0,0) ;}
 
 
   100% {
