--- a/app/assets/stylesheets/animation.css
+++ b/app/assets/stylesheets/animation.css
@@ -13,17 +13,17 @@
   }
   0% {
   }
-  15% { -webkit-transform:  scaleY(1.05) scaleX(.6)  translate(0,-1%) ;
+  15% { -webkit-transform:   skew(0deg,0deg);  scaleY(1.05) scaleX(1.2)  translate(0,-1%) ;
 }
 
   33% {
     
-    opacity:0.7;
-    -webkit-transform:  scaleY(1.1) scaleX(1)  translate(0,-2%) ;
+    opacity:.9;
+    -webkit-transform:  skew(0deg,0deg); scaleY(1.1) scaleX(1.3)  translate(0,-2%) ;
 
   }
 
-  60% { -webkit-transform:  scaleY(1.05) scaleX(.6)  translate(0,-1%) ;}
+  60% { opacity:.8; -webkit-transform:   skew(0deg,0deg)scaleY(1.05) scaleX(.8)  translate(0,-1%) ;}
 
 
   100% {
