--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -64,7 +64,6 @@ src: url(proxima_nova_thin.otf);
     max-height: 141*.6px !important;
     margin-right: -25px !important;
     margin-top: -30px !important;
-
   }
 
   .logo-wrapper{
@@ -83,7 +82,6 @@ src: url(proxima_nova_thin.otf);
   }
 }
 
-
 .flames{
 /*  position: fixed;
   bottom: 0;*/
@@ -95,8 +93,6 @@ src: url(proxima_nova_thin.otf);
   background-size:1032px 225px;
   margin-top: 15px;
 }
-
-
 
 .logo-oli{
   position: absolute;
@@ -129,6 +125,7 @@ src: url(proxima_nova_thin.otf);
   margin-right:102px;
   padding-top: 50px;
   z-index: 100;
+  
 }
   
 .logo-flame img{
@@ -164,7 +161,8 @@ src: url(proxima_nova_thin.otf);
       85% {-webkit-transform: rotate(3deg)}
       90% {-webkit-transform: rotate(2deg)}
       95% {-webkit-transform: rotate(1deg)}
-      100% {-webkit-transform: rotate(0deg)}*/
+      100% {-webkit-transform: rotate(0deg)}
+      */
       
 }
 
