--- a/app/assets/stylesheets/animation.css
+++ b/app/assets/stylesheets/animation.css
@@ -1,4 +1,4 @@
-.element-animation{
+.success-animation{
   -webkit-animation: animationFrames linear .85s;
   -webkit-animation-iteration-count: 1;
   -webkit-transform-origin: 1;
