--- a/app/views/oli/landing.html.erb
+++ b/app/views/oli/landing.html.erb
@@ -13,10 +13,12 @@
 
   <div class="info-oli">
     <div class="body-text-oli">
-      Gain clarity, confidence and connections so that you can do what you love, make money and make a difference.
+      Discover and communicate what you 
+    truly want and what you have to offer
+      to build a career and life you love.
     </div>
     <div class="footer-text-oli">
-      Be the first to hear when OLI launches.
+      Be the first to know when OLI launches.
     </div>
     <div class="oli-form">
       <%= form_tag("/landing", method: "post", id: "oli-form") do %>
