--- a/app/assets/stylesheets/animation.css
+++ b/app/assets/stylesheets/animation.css
@@ -34,3 +34,37 @@
   }
 }
 
+.fail-animation img{
+ 
+
+   -webkit-animation: spin .6s;
+   -webkit-animation-timing-function: ease;
+  z-index: 1000;
+}
+
+@-webkit-keyframes spin {
+  0%   {-webkit-transform: rotate(2deg)}
+      5% {-webkit-transform: rotate(4deg)}
+      10% {-webkit-transform: rotate(6deg)}
+      15% {-webkit-transform: rotate(8deg)}
+      20% {-webkit-transform: rotate(6deg)}
+      25% {-webkit-transform: rotate(4deg)}
+      30% {-webkit-transform: rotate(2deg)}
+      35% {-webkit-transform: rotate(0deg)}
+      40% {-webkit-transform: rotate(-2deg)}
+      45% {-webkit-transform: rotate(-4deg)}
+      50% {-webkit-transform: rotate(-6deg)}
+      55% {-webkit-transform: rotate(-8deg)}
+      60% {-webkit-transform: rotate(-6deg)}
+      65% {-webkit-transform: rotate(-4deg)}
+      70% {-webkit-transform: rotate(-2deg)}
+      75% {-webkit-transform: rotate(0deg)}
+      80% {-webkit-transform: rotate(2deg)}
+      85% {-webkit-transform: rotate(3deg)}
+      90% {-webkit-transform: rotate(2deg)}
+      95% {-webkit-transform: rotate(1deg)}
+      100% {-webkit-transform: rotate(0deg)}
+      /**/
+      
+}
+
