--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -3,7 +3,7 @@ body, html{
   width: 100%;
   margin: 0;
   padding:0;
-  font-size: 1em;
+  font-size: 1.02em;
 }
 
 body{
@@ -132,41 +132,6 @@ src: url(proxima_nova_thin.otf);
   max-width: 102*.9px;
   max-height: 141*.9px;
 }
-.fail-animation img{
- 
-
-   -webkit-animation: spin .6s;
-   -webkit-animation-timing-function: ease;
-  z-index: 1000;
-}
-
-@-webkit-keyframes spin {
-  0%   {-webkit-transform: rotate(2deg)}
-      5% {-webkit-transform: rotate(4deg)}
-      10% {-webkit-transform: rotate(6deg)}
-      15% {-webkit-transform: rotate(8deg)}
-      20% {-webkit-transform: rotate(6deg)}
-      25% {-webkit-transform: rotate(4deg)}
-      30% {-webkit-transform: rotate(2deg)}
-      35% {-webkit-transform: rotate(0deg)}
-      40% {-webkit-transform: rotate(-2deg)}
-      45% {-webkit-transform: rotate(-4deg)}
-      50% {-webkit-transform: rotate(-6deg)}
-      55% {-webkit-transform: rotate(-8deg)}
-      60% {-webkit-transform: rotate(-6deg)}
-      65% {-webkit-transform: rotate(-4deg)}
-      70% {-webkit-transform: rotate(-2deg)}
-      75% {-webkit-transform: rotate(0deg)}
-      80% {-webkit-transform: rotate(2deg)}
-      85% {-webkit-transform: rotate(3deg)}
-      90% {-webkit-transform: rotate(2deg)}
-      95% {-webkit-transform: rotate(1deg)}
-      100% {-webkit-transform: rotate(0deg)}
-      /**/
-      
-}
-
-
 
 .content-container{
   height: 100%;
@@ -194,15 +159,16 @@ src: url(proxima_nova_thin.otf);
 }
 
 .body-text-oli{
+  letter-spacing:.01em;
 
   font-family: pn-light;
   text-align: center;
   font-weight: normal;
   font-smoothing: antialiased;
   margin:0 auto;
-  max-width: 350px;
+  max-width: 295px;
   padding-bottom: 20px;
-  opacity: .6;
+  opacity: .78;
 } 
 
 
@@ -213,10 +179,10 @@ src: url(proxima_nova_thin.otf);
   font-weight: normal;
   font-smoothing: antialiased;
   margin:0 auto;
-  max-width: 350px;
-  opacity: .6;
-  padding-top: 30px;
-  padding-bottom: 20px;
+  max-width: 300px;
+  opacity: .78;
+  padding-top: 0px;
+  padding-bottom: 10px;
 }
 
 .status-oli{
@@ -233,8 +199,55 @@ src: url(proxima_nova_thin.otf);
 .oli-form{
   max-width: 400px;
 }
-
 .submit-button-oli{
+  border: none;  
+  height: 37px;
+  width: 100px;
+  border-radius: 20px;
+  margin-top: 10px;
+  background-color: #266dbf;
+  color: white;
+  font-family: pn-thin;
+  font-smoothing: antialiased;
+  box-shadow: 0 1px 3px rgba(38, 109, 191, .3); 
+
+  font-size: .9em;
+  letter-spacing:.03em;
+  font-weight: thin;
+  outline: none;
+  -webkit-appearance:none;
+  opacity: .95;
+}
+
+.oli-form ::-webkit-input-placeholder{
+  opacity: .7;
+}
+
+.oli-form input[type=text], .oli-form input[type=email]{
+  border: solid 1px rgba(0, 0, 0, .2);
+  width: 65%;
+  display: block;
+  margin: auto;
+  outline:none;
+  height: 37px;
+  font-family: pn-light;
+  border-radius: 20px;
+  padding-left: 20px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05); 
+
+}
+
+.submit-field-name-oli{
+  margin-bottom: 15px !important;
+
+}
+
+.submit-field-oli{
+    margin-bottom: 8px;
+
+}
+
+.inline .submit-button-oli{
   border: none;  
   height: 37px;
   width: 100px;
@@ -251,7 +264,7 @@ src: url(proxima_nova_thin.otf);
   opacity: .95;
 }
 
-.submit-field-name-oli{
+.inline .submit-field-name-oli{
   height: 39px;
   font-family: pn-light;
   margin:0 auto;
@@ -287,8 +300,7 @@ src: url(proxima_nova_thin.otf);
     height: 225px; /* .push must be the same height as .footer */
 }
 
-
-.submit-field-oli{
+.inline .submit-field-oli{
   height: 39px;
   font-family: pn-light;
   margin:0 auto;
@@ -307,6 +319,8 @@ src: url(proxima_nova_thin.otf);
   box-sizing: border-box;
   font-size: 1em;
 }
+
+
 
 .mobile .submit-field-oli, .mobile .submit-field-name-oli{
   height: 50px !important;
