--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -160,7 +160,7 @@ src: url(proxima_nova_thin.otf);
 
 .body-text-oli{
   letter-spacing:.01em;
-
+  line-height: 1.31em;
   font-family: pn-light;
   text-align: center;
   font-weight: normal;
