--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -62,7 +62,7 @@ src: url(proxima_nova_thin.otf);
   .logo-flame img{
     max-width: 102*.6px !important;
     max-height: 141*.6px !important;
-    margin-right: -25px !important;
+    margin-right: -27px !important;
     margin-top: -30px !important;
   }
 
@@ -122,7 +122,7 @@ src: url(proxima_nova_thin.otf);
   max-width: 250px;
   text-align: center;
   padding-bottom: 60px;
-  margin-right:102px;
+  margin-right:114px;
   padding-top: 50px;
   z-index: 100;
   
@@ -168,7 +168,7 @@ src: url(proxima_nova_thin.otf);
   margin:0 auto;
   max-width: 295px;
   padding-bottom: 20px;
-  opacity: .78;
+  color: rgba(0,0,0,.5) !important;
 } 
 
 
