--- a/app/views/oli/landing.html.erb
+++ b/app/views/oli/landing.html.erb
@@ -12,12 +12,12 @@
   </div>
 
   <div class="info-oli">
-    <div class="body-text-oli">
+    <div class="body-text-oli text-content-oli">
       Discover and communicate what you 
     truly want and what you have to offer
       to build a career and life you love.
     </div>
-    <div class="footer-text-oli">
+    <div class="footer-text-oli text-content-oli">
       Be the first to know when OLI launches.
     </div>
     <div class="oli-form">
