--- a/app/assets/stylesheets/animation.css
+++ b/app/assets/stylesheets/animation.css
@@ -16,12 +16,7 @@
   15% { -webkit-transform:   skew(0deg,0deg);  scaleY(1.05) scaleX(1.2)  translate(0,-1%) ;
 }
 
-  33% {
-    
-    opacity:.9;
-    -webkit-transform:  skew(0deg,0deg); scaleY(1.1) scaleX(1.3)  translate(0,-2%) ;
-
-  }
+  33% { opacity:.9; -webkit-transform:  skew(0deg,0deg); scaleY(1.1) scaleX(1.3)  translate(0,-2%) ;}
 
   60% { opacity:.9; -webkit-transform:   skew(0deg,0deg)scaleY(1.05) scaleX(.8)  translate(0,-1%) ;}
 
@@ -37,34 +32,177 @@
 .fail-animation img{
  
 
-   -webkit-animation: spin .6s;
-   -webkit-animation-timing-function: ease;
-  z-index: 1000;
+   -webkit-animation: hinge 2s;
+   -webkit-animation-timing-function: linear;
+}
+@-webkit-keyframes wobble {
+  0% {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+  }
+
+  15% {
+    -webkit-transform: translateX(-5%) rotate(-5deg);
+    transform: translateX(-5%) rotate(-5deg);
+  }
+
+  30% {
+    -webkit-transform: translateX(4%) rotate(3deg);
+    transform: translateX(4%) rotate(3deg);
+  }
+
+  45% {
+    -webkit-transform: translateX(-3%) rotate(-3deg);
+    transform: translateX(-3%) rotate(-3deg);
+  }
+
+  60% {
+    -webkit-transform: translateX(2%) rotate(2deg);
+    transform: translateX(2%) rotate(2deg);
+  }
+
+  75% {
+    -webkit-transform: translateX(0%) rotate(-1deg);
+    transform: translateX(0%) rotate(-1deg);
+  }
+
+  100% {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+  }
+}
+@-webkit-keyframes hinge {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  20%, 60% {
+    -webkit-transform: rotate(80deg);
+    transform: rotate(80deg);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  40% {
+    -webkit-transform: rotate(60deg);
+    transform: rotate(60deg);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  80% {
+    -webkit-transform: rotate(60deg) translateY(0);
+    transform: rotate(60deg) translateY(0);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: translateY(700px);
+    transform: translateY(700px);
+    opacity: 0;
+  }
 }
 
+@keyframes hinge {
+  0% {
+    -webkit-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  20%, 60% {
+    -webkit-transform: rotate(80deg);
+    -ms-transform: rotate(80deg);
+    transform: rotate(80deg);
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  40% {
+    -webkit-transform: rotate(60deg);
+    -ms-transform: rotate(60deg);
+    transform: rotate(60deg);
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  80% {
+    -webkit-transform: rotate(60deg) translateY(0);
+    -ms-transform: rotate(60deg) translateY(0);
+    transform: rotate(60deg) translateY(0);
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: translateY(700px);
+    -ms-transform: translateY(700px);
+    transform: translateY(700px);
+    opacity: 0;
+  }
+}
+
+.hinge {
+  -webkit-animation-name: hinge;
+  animation-name: hinge;
+}
 @-webkit-keyframes spin {
-  0%   {-webkit-transform: rotate(2deg)}
-      5% {-webkit-transform: rotate(4deg)}
-      10% {-webkit-transform: rotate(6deg)}
-      15% {-webkit-transform: rotate(8deg)}
-      20% {-webkit-transform: rotate(6deg)}
-      25% {-webkit-transform: rotate(4deg)}
-      30% {-webkit-transform: rotate(2deg)}
-      35% {-webkit-transform: rotate(0deg)}
-      40% {-webkit-transform: rotate(-2deg)}
-      45% {-webkit-transform: rotate(-4deg)}
-      50% {-webkit-transform: rotate(-6deg)}
-      55% {-webkit-transform: rotate(-8deg)}
-      60% {-webkit-transform: rotate(-6deg)}
-      65% {-webkit-transform: rotate(-4deg)}
-      70% {-webkit-transform: rotate(-2deg)}
-      75% {-webkit-transform: rotate(0deg)}
-      80% {-webkit-transform: rotate(2deg)}
-      85% {-webkit-transform: rotate(3deg)}
-      90% {-webkit-transform: rotate(2deg)}
-      95% {-webkit-transform: rotate(1deg)}
-      100% {-webkit-transform: rotate(0deg)}
-      /**/
+  /*0%   {-webkit-transform: rotate(0deg)}
+  20% {-webkit-transform: rotate(8deg)}
+  60% {-webkit-transform: rotate(-8deg)}
+  85% {-webkit-transform: rotate(-4deg)}
+  100% {-webkit-transform: rotate(0deg)}*/
+
+
+ /* 0%   {-webkit-transform: rotate(0deg)}
+      5% {-webkit-transform: rotate(2deg)}
+      10% {-webkit-transform: rotate(4deg)}
+      15% {-webkit-transform: rotate(6deg)}
+      20% {-webkit-transform: rotate(8deg)}
+      25% {-webkit-transform: rotate(6deg)}
+      30% {-webkit-transform: rotate(4deg)}
+      35% {-webkit-transform: rotate(2deg)}
+      40% {-webkit-transform: rotate(0deg)}
+      45% {-webkit-transform: rotate(-2deg)}
+      50% {-webkit-transform: rotate(-4deg)}
+      55% {-webkit-transform: rotate(-6deg)}
+      60% {-webkit-transform: rotate(-8deg)}
+      65% {-webkit-transform: rotate(-6deg)}
+      70% {-webkit-transform: rotate(-4deg)}
+      75% {-webkit-transform: rotate(-2deg)}
+      80% {-webkit-transform: rotate(0deg)}
+      85% {-webkit-transform: rotate(2deg)}
+      90% {-webkit-transform: rotate(1deg)}
+      95% {-webkit-transform: rotate(0deg)}
+      100% {-webkit-transform: rotate(0deg)}*/
       
 }
 
