--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -96,7 +96,7 @@ src: font-url('proxima_nova_thin.otf');
   bottom: 0;*/
   bottom: 0;
   width: 100%;
-  background: url("flames.png");
+  background: image-url("flames.png");
   height: 225px;
   z-index: 0;
   background-size:1032px 225px;
