--- a/app/assets/stylesheets/animate.css
+++ b/app/assets/stylesheets/animate.css
@@ -26,8 +26,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 
 .animated.hinge {
-  -webkit-animation-duration: 2s;
-  animation-duration: 2s;
+  -webkit-animation-duration: 1.5s;
+  animation-duration: 1.5s;
 }
 
 @-webkit-keyframes bounce {
@@ -2641,6 +2641,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 @-webkit-keyframes hinge {
   0% {
     -webkit-transform: rotate(0);
+
     transform: rotate(0);
     -webkit-transform-origin: bottom;
     transform-origin: bottom;
@@ -2648,39 +2649,40 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     animation-timing-function: ease-in-out;
   }
 
-  20%, 60% {
-    -webkit-transform: rotate(-80deg);
-    transform: rotate(-80deg);
+  25% {
+    -webkit-transform: rotate(-120deg)  scale(.95);
+    transform: rotate(-120deg);
     -webkit-transform-origin: bottom;
     transform-origin: bottom;
     -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
   }
 
-  40% {
-    -webkit-transform: rotate(-60deg);
-    transform: rotate(-60deg);
+  50% {
+    -webkit-transform: rotate(-90deg)  scale(.9);
+    transform: rotate(-90deg);
     -webkit-transform-origin: bottom;
     transform-origin: bottom;
+
     -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
   }
 
-  80% {
-    -webkit-transform: rotate(-60deg) translateY(0);
-    transform: rotate(-60deg) translateY(0);
+  75% {
+    -webkit-transform: rotate(-150deg) scale(.85);
+    transform: rotate(-150deg);
     -webkit-transform-origin: bottom;
     transform-origin: bottom;
     -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
-    opacity: 1;
+    opacity: .8;
+
   }
+
 
   100% {
-    -webkit-transform: translateY(700px) rotate(-180deg);
-    transform: translateY(700px);
 
-    opacity: 0;
+    opacity: 1;
   }
 }
 
