--- a/app/assets/stylesheets/animation.css
+++ b/app/assets/stylesheets/animation.css
@@ -13,9 +13,10 @@
   }
   0% {
   }
-  15% { -webkit-transform:   skew(0deg,0deg);}
+  15% { -webkit-transform:   skew(0deg,0deg);  scaleY(1.05) scaleX(1.2)  translate(0,-1%) ;
+}
 
-  33% { opacity:.9; -webkit-transform:  skew(0deg,0deg);}
+  33% { opacity:.9; -webkit-transform:  skew(0deg,0deg); scaleY(1.1) scaleX(1.3)  translate(0,-2%) ;}
 
   60% { opacity:.9; -webkit-transform:   skew(0deg,0deg)scaleY(1.05) scaleX(.8)  translate(0,-1%) ;}
 
