--- a/app/assets/stylesheets/animate.css
+++ b/app/assets/stylesheets/animate.css
@@ -2681,7 +2681,12 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 
   100% {
-
+    -webkit-transform: rotate(-360deg) scale(1);
+    transform: rotate(-360deg);
+    -webkit-transform-origin: bottom;
+    transform-origin: bottom;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
     opacity: 1;
   }
 }
